# fuel-vm

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  \  ci_checks.sh  index.html  wasm_publish.sh
fuel-asm/: Cargo.toml  README.md
fuel-asm/.github/workflows/: cargo_test.yml  ci.yml
fuel-asm/derive/: Cargo.toml
fuel-asm/derive/src/: codegen.rs  input.rs  lib.rs  packing.rs  serialize.rs
fuel-asm/src/: args.rs  conv.rs  encoding_tests.rs  instruction.rs  instruction_result.rs  lib.rs  macros.rs  op.rs  opcode.rs  pack.rs  panic_instruction.rs  panic_reason.rs  types.rs  unpack.rs
fuel-asm/src/args/: narrowint.rs  wideint.rs  widemath.rs
fuel-asm/src/opcode/: args.rs  consts.rs
fuel-asm/tests/: encoding.rs
fuel-compression/: Cargo.toml
fuel-compression/src/: block_section.rs  compaction.rs  dummy_registry.rs  impls.rs  key.rs  lib.rs  table.rs  traits.rs
fuel-compression/src/registry/: block_section.rs  db.rs  in_memory.rs  key.rs  mod.rs
fuel-crypto/: Cargo.toml  README.md
fuel-crypto/benches/: signature.rs
fuel-crypto/src/: ed25519.rs  error.rs  hasher.rs  keystore.rs  lib.rs  message.rs  mnemonic.rs  public.rs  secp256.rs  secp256r1.rs  secret.rs  signature.rs  signer.rs
fuel-crypto/src/secp/: backend.rs  public.rs  secret.rs
fuel-crypto/src/secp256/: backend.rs  public.rs  secret.rs  signature.rs  signature_format.rs
fuel-crypto/src/secp256k1/: public.rs  secret.rs  signature.rs  signer.rs
fuel-crypto/src/tests/: hasher.rs  mnemonic.rs  mod.rs  serde.rs  signature.rs  signer.rs
fuel-crypto/tests/: mnemonic.rs  serde.rs  signature.rs
fuel-derive/: Cargo.toml  README.md  manual_impl_tx_serde.rs
fuel-derive/src/: asm.rs  attribute.rs  compact.rs  compressed.rs  deserialize.rs  evaluate.rs  helpers.rs  lib.rs  serialize.rs  utils.rs
fuel-derive/src/canonical/: attribute.rs  deserialize.rs  serialize.rs
fuel-derive/src/compression/: attribute.rs  compress.rs  decompress.rs
fuel-merkle/: Cargo.toml  README.md
fuel-merkle/.github/workflows/: cargo_test.yml  ci.yml
fuel-merkle/benches/: smt.rs
fuel-merkle/docs/test-specs/: sparse_merkle_tree_tests.md
fuel-merkle/proptest-regressions/tests/: binary_proof.txt  binary_verify.txt  sparse.txt
fuel-merkle/src/: avl.rs  binary.rs  btree.rs  common.rs  digest.rs  jellyfish.rs  lib.rs  merkle_patricia_trie.rs  proof_set.rs  sha.rs  sparse.rs  storage.rs  sum.rs
fuel-merkle/src/binary/: hash.rs  in_memory.rs  merkle_tree.rs  mod.rs  mrc.rs  node.rs  primitive.rs  root_calculator.rs  subtree.rs  verify.rs
fuel-merkle/src/btree/: internal_node.rs  leaf_node.rs
fuel-merkle/src/common/: error.rs  hash.rs  mod.rs  msb.rs  node.rs  path.rs  path_iterator.rs  position.rs  position_path.rs  prefix.rs  storage.rs  storage_map.rs  subtree.rs
fuel-merkle/src/jellyfish/: error.rs  hash.rs  in_memory.rs  jmt_integration.rs  merkle_tree.rs  primitive.rs  proof.rs  root_calculator.rs  verify.rs
fuel-merkle/src/merkle_patricia_trie/: apply_operations.rs  in_memory.rs  nodes_iterator.rs  storage_map.rs  trie.rs
fuel-merkle/src/sparse/: branch.rs  generic.rs  hash.rs  hash_generic.rs  in_memory.rs  merkle_tree.rs  merkle_tree_generic.rs  node.rs  node_generic.rs  primitive.rs  primitive_generic.rs  proof.rs  test.rs  verify.rs
fuel-merkle/src/sum/: hash.rs  merkle_tree.rs  node.rs
fuel-merkle/src/tests/: binary.rs  binary_proof.rs  binary_verify.rs  mod.rs  sparse.rs
fuel-merkle/test-helpers/: Cargo.toml
fuel-merkle/test-helpers/src/: binary.rs  common.rs  data.rs  lib.rs  test_data.rs
fuel-merkle/tests/: binary.rs
fuel-merkle/tests-data/: tests-data.rs
fuel-merkle/tests-data-binary/: tests-data-binary.rs
fuel-merkle/tests-data-binary/fixtures/: Test 0 Leaves.yaml  Test 1 Leaf Index 0.yaml  Test 1 Leaf Invalid Proof Index.yaml  Test 1 Leaf Invalid Root.yaml  Test 10 Leaves Index 4.yaml  Test 100 Leaves Index 10.yaml  Test 1024 Leaves Index 512.yaml  Test 1024 Leaves Invalid Root.yaml  Test 3 Leaves Invalid Num Leaves.yaml
fuel-merkle/tests-data/fixtures/: Test Delete Non-existent Key.yaml  Test Delete Sparse Union.yaml  Test Interleaved Update Delete.yaml  Test Update 1 Delete 1.yaml  Test Update 10 Delete 5.yaml  Test Update 2 Delete 1.yaml  Test Update With Empty Data Changes Root.yaml  Test Update With Empty Data.yaml
fuel-storage/: Cargo.toml  README.md
fuel-storage/src/: error.rs  impls.rs  lib.rs
fuel-tx/: Cargo.toml  README.md
fuel-tx/benches/: contract_root.rs
fuel-tx/src/: builder.rs  bytes.rs  checked_transaction.rs  consts.rs  contract.rs  crypto.rs  lib.rs  receipt.rs  test_helper.rs  transaction.rs  tx_pointer.rs  types.rs
fuel-tx/src/receipt/: sizes.rs  (+4 more)
fuel-tx/test-helpers/: Cargo.toml
fuel-tx/tests/: bytes.rs  display.rs  offset.rs  prepared_init.rs  transaction.rs  txid.rs  valid.rs
fuel-types/: Cargo.toml  README.md
fuel-types/benches/: bench.rs  bytes.rs
fuel-types/src/: array_types.rs  bytes.rs  canonical.rs  compressed.rs  data.rs  error.rs  fmt.rs  layout.rs  lib.rs  numeric_types.rs  types.rs
fuel-types/tests/: bytes.rs  types.rs
fuel-vm/: Cargo.toml  LICENSE  Makefile  README.md
fuel-vm/benches/: bench.rs  epar.rs  execution.rs  meq_performance.rs  predicate.rs  receipts.rs
fuel-vm/examples/: external.rs  single_step.rs
fuel-vm/fuzz/: Cargo.toml  README.md  analyze.py  gas_statistics.csv
fuel-vm/src/: arith.rs  backtrace.rs  call.rs  checked_transaction.rs  constraints.rs  consts.rs  context.rs  convert.rs  crypto.rs  error.rs  estimated_transaction.rs  gas.rs  immutable_transaction.rs  interpreter.rs  lib.rs  memory_client.rs  pool.rs  predicate.rs  profiler.rs  state.rs  storage.rs  transactor.rs  util.rs  verification.rs
fuel-vm/tests/: alu.rs  backtrace.rs  blockchain.rs  cgas.rs  code_coverage.rs  contract.rs  crypto.rs  encoding.rs  flow.rs  gas_factor.rs  jump_relative.rs  log.rs  memory.rs  metadata.rs  outputs.rs  predicate.rs  profile_gas.rs  spec.rs  test_helpers.rs  validation.rs
version-compatibility/: Cargo.toml
version-compatibility/src/: fuel_tx.rs  lib.rs
(+56209 files in other folders)
