[workspace]
members = [
    "fuel-asm",
    "fuel-crypto",
    "fuel-merkle",
    "fuel-storage",
    "fuel-tx",
    "fuel-tx/test-helpers",
    "fuel-types",
    "fuel-vm",
]
resolver = "2"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies", "data-structures", "parsing"]
edition = "2021"
homepage = "https://fuel.network/"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-vm"
version = "0.26.0"

[workspace.dependencies]
fuel-asm = { version = "0.26.0", path = "./fuel-asm", default-features = false }
fuel-crypto = { version = "0.26.0", path = "./fuel-crypto", default-features = false }
fuel-merkle = { version = "0.26.0", path = "./fuel-merkle", default-features = false }
fuel-storage = { version = "0.26.0", path = "./fuel-storage", default-features = false }
fuel-tx = { version = "0.26.0", path = "./fuel-tx", default-features = false }
fuel-types = { version = "0.26.0", path = "./fuel-types", default-features = false }
