[workspace]
members = [
    "fuel-asm",
    "fuel-compression",
    "fuel-crypto",
    "fuel-merkle",
    "fuel-storage",
    "fuel-tx",
    "fuel-types",
    "fuel-vm",
    "version-compatibility",
]
resolver = "2"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies", "data-structures", "parsing"]
edition = "2024"
homepage = "https://fuel.network/"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-vm"
rust-version = "1.90.0"
version = "0.65.0"

[workspace.dependencies]
bincode = { version = "1.3", default-features = false }
bitflags = "2"
criterion = "0.5.0"
educe = { version = "0.6", default-features = false }
fuel-asm = { version = "0.65.0", path = "fuel-asm", default-features = false }
fuel-compression = { version = "0.65.0", path = "fuel-compression", default-features = false }
fuel-crypto = { version = "0.65.0", path = "fuel-crypto", default-features = false }
fuel-derive = { version = "0.65.0", path = "fuel-derive", default-features = false }
fuel-merkle = { version = "0.65.0", path = "fuel-merkle", default-features = false }
fuel-storage = { version = "0.65.0", path = "fuel-storage", default-features = false }
fuel-tx = { version = "0.65.0", path = "fuel-tx", default-features = false }
fuel-types = { version = "0.65.0", path = "fuel-types", default-features = false }
fuel-vm = { version = "0.65.0", path = "fuel-vm", default-features = false }

[profile.web-release] # For minimal wasm binaries, use this profile
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"
