[package]
name = "fuel-asm"
version = "0.4.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies", "data-structures", "parsing"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-asm"
description = "Defines all opcodes available in the FuelVM."

[dependencies]
fuel-types = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[features]
default = ["fuel-types/default", "std"]
std = ["fuel-types/std"]
serde-types = ["fuel-types/serde-types", "serde-types-minimal", "serde/default", "std"]
serde-types-minimal = ["fuel-types/serde-types-minimal", "serde"]

[[test]]
name = "test-encoding"
path = "tests/encoding.rs"
required-features = ["std"]

# docs.rs-specific configuration
# preview with `RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --open`
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
