[package]
name = "fuel-asm"
rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "primitives"]
license = "Apache-2.0"
repository = { workspace = true }
description = "Atomic types of the FuelVM."

# docs.rs-specific configuration
# preview with `RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --open`
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
typescript = ["wasm-bindgen"]
std = ["alloc", "serde?/default", "fuel-types/std"]
alloc = []
serde = ["dep:serde"]

[dependencies]
bitflags = { workspace = true }
fuel-types = { workspace = true, default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
strum = { version = "0.24", default-features = false, features = ["derive"] }
wasm-bindgen = { version = "0.2.97", optional = true }

[dev-dependencies]
bincode = { workspace = true }
fuel-asm = { path = ".", features = ["serde"] }
rstest = "0.16"
