[package]
name = "fuel-compression"
version = { workspace = true }
authors = { workspace = true }
categories = ["cryptography::cryptocurrencies"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel-compression"]
license = { workspace = true }
repository = { workspace = true }
description = "Compression and decompression of Fuel blocks for DA storage."

[dependencies]
anyhow = "1.0"
fuel-derive = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"

[dev-dependencies]
bimap = "0.6"
# postcard = { version = "1.0", features = ["use-std"] }
fuel-types = { workspace = true, features = ["serde"] }
# fuel-compression = { path = "." }