[package]
name = "fuel-compression"
rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
categories = ["cryptography::cryptocurrencies"]
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel-compression"]
license = { workspace = true }
repository = { workspace = true }
description = "Compression and decompression of Fuel blocks for DA storage."

[features]
alloc = ["fuel-types/alloc"]

[dependencies]
fuel-derive = { workspace = true }
fuel-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
