[package]
name = "fuel-derive"
version = { workspace = true }
authors = { workspace = true }
categories = ["cryptography::cryptocurrencies", "data-structures"]
edition = { workspace = true }
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = { workspace = true }
repository = { workspace = true }
description = "FuelVM (de)serialization derive macros for `fuel-vm` data structures."

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
synstructure = "0.13"
