[package]
name = "fuel-merkle"
version = "0.4.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-merkle"
description = "Fuel Merkle tree libraries."

[dependencies]
digest = { version = "0.10", default-features = false }
fuel-storage = "0.3"
hashbrown = "0.12"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
datatest-stable = "0.1"
fuel-merkle-test-helpers = { path = "test-helpers" }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"

[features]
default = ["std"]
std = ["dep:thiserror", "digest/default", "hex/default", "sha2/default"]

[[test]]
name = "tests-data"
path = "./tests-data/tests-data.rs"
harness = false
required-features = ["std"]

[[test]]
name = "tests-binary"
path = "./tests/binary.rs"
harness = true
