[package]
name = "fuel-merkle"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "merkle"]
license = "Apache-2.0"
repository = { workspace = true }
description = "Fuel Merkle tree libraries."

[dependencies]
digest = { version = "0.10", default-features = false }
fuel-storage = { workspace = true, default-features = false }
hashbrown = "0.13"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
snafu = { version = "0.7.5", default-features = false }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
datatest-stable = "0.1"
fuel-merkle-test-helpers = { path = "test-helpers" }
hex = "0.4"
rand = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"

[features]
default = ["std"]
std = ["dep:thiserror", "fuel-storage/std", "digest/default", "hex/default", "sha2/default"]
test-helpers = []

[[test]]
name = "tests-data"
path = "./tests-data/tests-data.rs"
harness = false
required-features = ["std"]

[[test]]
name = "tests-data-binary"
path = "./tests-data-binary/tests-data-binary.rs"
harness = false
required-features = ["std"]

[[bench]]
name = "smt"
harness = false
required-features = ["std"]
