[package]
name = "fuel-merkle"
rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "merkle"]
license = "Apache-2.0"
repository = { workspace = true }
description = "Fuel Merkle tree libraries."

[dependencies]
derive_more = { version = "0.99", default-features = false, features = ["display"] }
digest = { version = "0.10", default-features = false }
fuel-storage = { workspace = true, default-features = false }
hashbrown = "0.13"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
datatest-stable = "0.2"
fuel-merkle-test-helpers = { path = "test-helpers" }
hex = "0.4"
proptest = "1.4"
proptest-derive = "0.5.1"
rand = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"

[features]
default = ["std"]
std = ["digest/default", "hex/default", "sha2/default"]
test-helpers = []
serde = [
    "dep:serde",
]

[[test]]
name = "tests-data"
path = "./tests-data/tests-data.rs"
harness = false
required-features = ["std"]

[[test]]
name = "tests-data-binary"
path = "./tests-data-binary/tests-data-binary.rs"
harness = false
required-features = ["std"]

[[bench]]
name = "smt"
harness = false
required-features = ["std"]
