[package]
name = "fuel-storage"
version = "0.2.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-storage"
description = "Storage traits for Fuel storage-backed data structures."

[dependencies]
auto_impl = "1.0"
