[package]
name = "fuel-storage"
rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel", "fuel-vm"]
license = "Apache-2.0"
repository = { workspace = true }
description = "Storage traits for Fuel storage-backed data structures."

[lints]
workspace = true
