[package]
name = "fuel-types"
rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "primitives"]
license = "Apache-2.0"
repository = { workspace = true }
description = "Atomic types of the FuelVM."

[dependencies]
fuel-derive = { workspace = true }
hex = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
wasm-bindgen = { version = "0.2.97", optional = true }
serde_with = { version = "3", default-features = false, features = ["alloc", "macros"], optional = true }
educe = { workspace = true, default-features = false, features = ["Debug"] }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
fuel-types = { path = ".", features = ["random", "serde"] }
postcard = { version = "1.0", features = ["use-std"] }
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
serde_json = "1.0"

[features]
default = ["std", "serde?/default"]
typescript = ["wasm-bindgen"]
alloc = ["hex/alloc"]
random = ["rand"]
serde = ["dep:serde", "dep:serde_with", "alloc"]
std = ["alloc", "serde?/std", "hex/std"]
unsafe = []

[[bench]]
name = "bench"
harness = false
