[package]
name = "fuel-vm"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel", "fuel-vm"]
license = "BUSL-1.1"
repository = { workspace = true }
description = "FuelVM interpreter."


[dependencies]
anyhow = { version = "1.0", optional = true }
backtrace = { version = "0.3", optional = true } # requires debug symbols to work
bitflags = "1"
derivative = "2.2"
dyn-clone = { version = "1.0", optional = true }
ethnum = "1.3"
fuel-asm = { workspace = true, path = "../fuel-asm" }
fuel-crypto = { workspace = true, path = "../fuel-crypto" }
fuel-merkle = { workspace = true }
fuel-storage = { workspace = true, path = "../fuel-storage" }
fuel-tx = { workspace = true, features = ["builder", "std"], path = "../fuel-tx" }
fuel-types = { workspace = true, path = "../fuel-types" }
itertools = "0.10"
paste = "1.0"
primitive-types = { version = "0.12", default-features = false }
rand = { version = "0.8", optional = true }
rkyv = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
sha3 = "0.10"
strum = { version = "0.24", features = ["derive"], optional = true }
tai64 = { git = "https://github.com/Dentosal/rustcrypto-formats", branch = "tai64-rkyv-support", features = ["rkyv"] }
thiserror = "1.0"


[dev-dependencies]
fuel-tx = { workspace = true, features = ["builder"] }
fuel-vm = { path = ".", default-features = false, features = ["test-helpers", "serde", "profile-coverage", "profile-gas"] }
num-integer = "0.1.45"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rayon = "1.7"
rstest = "0.17"
serde_json = "1.0"
test-case = "2.2"

[features]
default = []
arbitrary = ["fuel-asm/arbitrary"]
debug = []
optimized = []
profile-gas = ["profile-any"]
profile-coverage = ["profile-any"]
profile-any = ["dyn-clone"] # All profiling features should depend on this
random = ["fuel-crypto/random", "fuel-types/random", "fuel-tx/random", "rand"]
rkyv =["dep:rkyv", "fuel-asm/rkyv", "fuel-types/rkyv", "fuel-tx/rkyv", "fuel-crypto/rkyv", "tai64/rkyv"]
serde = ["dep:serde", "fuel-asm/serde", "fuel-types/serde", "fuel-tx/serde"]
test-helpers = ["fuel-tx/builder", "random", "dep:anyhow"]
